RESOLVED FIXED178063
mediaPlaybackRequiresUserAction API replacement annotation is wrong
https://bugs.webkit.org/show_bug.cgi?id=178063
Summary mediaPlaybackRequiresUserAction API replacement annotation is wrong
Tim Horton
Reported 2017-10-08 00:11:21 PDT
mediaPlaybackRequiresUserAction API replacement annotation is wrong
Attachments
Patch (1.99 KB, patch)
2017-10-08 00:11 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-10-08 00:11:32 PDT
mitz
Comment 2 2017-10-08 00:12:38 PDT
Comment on attachment 323126 [details] Patch Nice optimization!
WebKit Commit Bot
Comment 3 2017-10-08 01:00:44 PDT
Comment on attachment 323126 [details] Patch Clearing flags on attachment: 323126 Committed r223030: <http://trac.webkit.org/changeset/223030>
WebKit Commit Bot
Comment 4 2017-10-08 01:00:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-10-08 01:01:23 PDT
Note You need to log in before you can comment on or make changes to this bug.