mediaPlaybackRequiresUserAction API replacement annotation is wrong https://bugs.webkit.org/show_bug.cgi?id=178063

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKWebViewConfiguration.h:
mediaPlaybackRequiresUserAction suggests that you should use
requiresUserActionForMediaPlayback instead, but that is also deprecated.
Instead, follow the chain and suggest mediaTypesRequiringUserActionForPlayback.


Canonical link: https://commits.webkit.org/194301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223030 268f45cc-cd09-0410-ab3c-d52691b4dbfc